better command handler, making new commands, using template literals.

--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,4 @@
 {
-  "token":"MzQzODE4ODQzNjk0Njk0NDAw.DGjt9Q.vDuygX9B70jEdlEi1k5UtHxx1hQ"
+  "token":"MzQzODE4ODQzNjk0Njk0NDAw.DGjt9Q.vDuygX9B70jEdlEi1k5UtHxx1hQ",
+  "prefix":"!"
 }
