--- a/settings.json
+++ b/settings.json
@@ -3,6 +3,7 @@
   "prefix":"!",
   "levels": {
     "roles": {
+      "dev":"343774678197862410",
       "l0":"343751945263120384",
       "l1":"343752342350462976",
       "l2":"343775838493343745",
@@ -19,7 +20,9 @@
       "l13":"343781088507723776",
       "l14":"343781636388814849"
     },
+
     "rooms": {
+      "dev":"343909791145656322",
       "l0":"343805163355504660",
       "l1":"343805224882012181",
       "l2":"343812967034519554",
@@ -35,6 +38,11 @@
       "l12":"343813075662667787",
       "l13":"343813106469699584",
       "l14":"343813106474024960"
+    },
+
+    "passwords": {
+      "l0l1":"password123"
     }
+
   }
 }
